# test_andrew_nifi_converter

./: .gitignore  CHANGELOG.md  CLAUDE.md  GETTING_STARTED.md  PROJECT_STATUS.md  README.md  VALIDATION_GUIDE.md  cleanup_examples.sh  cleanup_project.sh  pyproject.toml
docs/: README.md  client_api.md  el_functions_catalog.md  el_transpiler_design.md  provenance_extraction.md
examples/: README.md  analyze_processor_usage.py  provenance_to_python.py  run_generated_flow.py  test_connection_with_group_filter.py  validate_against_nifi.py  validate_external_system.py  validate_generated_code.py
nifi2py/: __init__.py  cli.py  client.py  el_grammar.lark  el_transpiler.py  expression_language.py  generator.py  graph_validator.py  lineage_tracer.py  models.py  processor_converters.py  provenance_extractor.py  provenance_generator.py  provenance_validator.py  template_parser.py  validator.py
nifi2py/converters/: __init__.py  attributes.py  base.py  content.py  http.py  standard.py  stubs.py
nifi2py/templates/: module.py.j2
tests/: test_cli.py  test_client.py  test_converters.py  test_e2e_integration.py  test_expression_language.py  test_generator.py  test_provenance_extractor.py  test_provenance_generator.py  test_template_parser.py
tests/fixtures/: el_test_cases.json
